src/snapshots/prql__parser_pest__parse_expr.snap
---
source: src/parser_pest.rs
assertion_line: 47
expression: "parse_expr(r#\"country = \"USA\"\"#)"

---
Ok(
    [
        Pair {
            rule: terms,
            span: Span {
                str: "country = \"USA\"",
                start: 0,
                end: 15,
            },
            inner: [
                Pair {
                    rule: ident,
                    span: Span {
                        str: "country",
                        start: 0,
                        end: 7,
                    },
                    inner: [],
                },
                Pair {
                    rule: operator,
                    span: Span {
                        str: "=",
                        start: 8,
                        end: 9,
                    },
                    inner: [],
                },
                Pair {
                    rule: string,
                    span: Span {
                        str: "\"USA\"",
                        start: 10,
                        end: 15,
                    },
                    inner: [],
                },
            ],
        },
    ],
)
