src/snapshots/prql__parser_pest__parse_idents.snap
---
source: src/parser_pest.rs
assertion_line: 81
expression: "parse_idents(r#\"country = \"USA\"\"#)"

---
Ok(
    [
        Pair {
            rule: idents,
            span: Span {
                str: "country = \"USA\"",
                start: 0,
                end: 15,
            },
            inner: [
                Pair {
                    rule: ident,
                    span: Span {
                        str: "country",
                        start: 0,
                        end: 7,
                    },
                    inner: [],
                },
                Pair {
                    rule: ident,
                    span: Span {
                        str: "\"USA\"",
                        start: 10,
                        end: 15,
                    },
                    inner: [
                        Pair {
                            rule: string,
                            span: Span {
                                str: "\"USA\"",
                                start: 10,
                                end: 15,
                            },
                            inner: [],
                        },
                    ],
                },
            ],
        },
    ],
)
