src/snapshots/prql__parser_pest__parse_transform-3.snap
---
source: src/parser_pest.rs
assertion_line: 44
expression: "parse_transform(r#\"    filter country = \"USA\"\"#)"

---
Ok(
    [
        Pair {
            rule: transform,
            span: Span {
                str: "    filter country = \"USA\"",
                start: 0,
                end: 26,
            },
            inner: [
                Pair {
                    rule: filter,
                    span: Span {
                        str: "filter",
                        start: 4,
                        end: 10,
                    },
                    inner: [],
                },
                Pair {
                    rule: idents,
                    span: Span {
                        str: "country = \"USA\"",
                        start: 11,
                        end: 26,
                    },
                    inner: [
                        Pair {
                            rule: ident,
                            span: Span {
                                str: "country",
                                start: 11,
                                end: 18,
                            },
                            inner: [],
                        },
                        Pair {
                            rule: ident,
                            span: Span {
                                str: "\"USA\"",
                                start: 21,
                                end: 26,
                            },
                            inner: [
                                Pair {
                                    rule: quoted_string,
                                    span: Span {
                                        str: "\"USA\"",
                                        start: 21,
                                        end: 26,
                                    },
                                    inner: [],
                                },
                            ],
                        },
                    ],
                },
            ],
        },
    ],
)
